fix gap in list

--- a/src/cmps/TemplateList/TemplateList.scss
+++ b/src/cmps/TemplateList/TemplateList.scss
@@ -1,5 +1,5 @@
 .template-list {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-    gap: 10px 10px;
+    gap: 80px 10px;
 }
